# hagi

./: .gitignore  Cargo.toml  README.md
docs/: commands.md  development.md  installation.md  mcp-setup.md  troubleshooting.md  usage.md
patches/: mcp-memory-service-hf-home-fix.patch
src/: main.rs  templates.rs  utils.rs
src/commands/: config.rs  install.rs  mcp.rs  mod.rs  status.rs  sync.rs  uninstall.rs  update.rs
templates/.chat/: CLAUDE.md  mcp.json
templates/.chat/.claude/instructions/: general.md  tools.md
templates/.chat/.claude/skills/note/: SKILL.md
templates/.chat/instructions/: cultural-perspective.md  general.md  response-style.md  tools.md
templates/.claude/: CLAUDE.md  mcp.json  settings.local.json
templates/.claude/commands/: code-pattern.md  note.md  research.md  review.md  serena.md  st.md
templates/.claude/hooks/: check-claude-git.sh
templates/.claude/instructions/: best-practices.md  code-quality.md  code-style.md  coding.md  communication.md  documentation.md  efficiency.md  general.md  git-workflow.md  memory.md  security.md  simplicity.md  task-management.md  tools.md
templates/.claude/skills/design/: SKILL.md
templates/.claude/skills/research/: SKILL.md
templates/.claude/skills/review/: SKILL.md
templates/.claude/skills/serena/: SKILL.md
templates/.claude/skills/st/: SKILL.md
templates/git-hooks/: commit-msg  pre-commit
templates/mcp-memory-service/: .env.template
