[package]
name = "hagi"
version = "0.1.0"
edition = "2024"
authors = ["kiffveef"]
description = "Claude Code setup tool for Rust/Shell environments"
repository = "https://github.com/kiffveef/hagi"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
include_dir = "0.7"
